# terminal_chat_app

./: .gitattributes  .gitignore  Cargo.toml  config_file.txt
Commands/: Cargo.toml
Commands/src/: lib.rs
CustomSocket/: Cargo.toml
CustomSocket/src/: lib.rs
MainServer/: Cargo.toml
MainServer/src/: custom_errors.rs  main.rs  server.rs  server_header.rs  user.rs
MainServer/src/server/: recv_handler.rs  server_header.rs  timeout_handler.rs
Peer/: Cargo.toml
Peer/src/: lib.rs  peer.rs
client/: Cargo.toml
client/src/: main.rs  server.rs
client/src/server/: recv_handler.rs
custom_errors/: Cargo.toml
custom_errors/src/: lib.rs
http_server/: Cargo.toml
http_server/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
user/: Cargo.toml
user/src/: lib.rs
