[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.39.2", features = ["full"]}
custom_errors = {path = "../custom_errors"}
Commands = {path = "../Commands"}
user = {path = "../user"}
bincode = "1.3.3"
CustomServer_lib = {path = "../../CustomSocket/CustomServer_lib"}
CustomSocket_lib = {path = "../../CustomSocket/CustomSocket_lib"}
lazy_static = "1.5.0"